--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,29 @@
+# by @vue-cli 3
+
+.DS_Store
+node_modules
+/dist
+
+# local env files
+.env.local
+.env.*.local
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw*
+
+# @vue-cli 3 end
+
 # Logs
 logs
 *.log
@@ -59,3 +85,4 @@ typings/
 
 # next.js build output
 .next
+
