--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "normalize.css": "^8.0.1",
     "vue": "^2.6.6",
     "vue-router": "^3.0.1",
+    "vue2-storage": "^3.4.0",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
