--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "muse-ui": "^3.0.2",
     "muse-ui-progress": "^0.1.0",
     "normalize.css": "^8.0.1",
+    "sha1": "^1.1.1",
     "vue": "^2.6.6",
     "vue-router": "^3.0.1",
     "vue2-storage": "^3.4.0",
