--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/vue-fontawesome": "^0.1.6",
     "axios": "^0.18.0",
     "muse-ui": "git+https://github.com/uioz/muse-ui.git",
+    "muse-ui-message": "^0.2.1",
     "muse-ui-progress": "^0.1.0",
     "normalize.css": "^8.0.1",
     "sha1": "^1.1.1",
